--- a/part1/assignment.Rmd
+++ b/part1/assignment.Rmd
@@ -133,11 +133,11 @@ K <- 23.5
 # to calculate the fair price at t = 0 in closed form.
 BSM <- function(s0, T1, r, sigma, K){
   d1 <- (log(s0/K)+(r+sigma^2/2)*T1)/(sigma*sqrt(T1))
-  print(d1)
+  #print(d1)
   d2 <- d1 - sigma*sqrt(T1)
-  print(d2)
-  print(pnorm(d1))
-  print(pnorm(d2))
+  #print(d2)
+  #print(pnorm(d1))
+  #print(pnorm(d2))
   s0*pnorm(d1) - exp(-r*T1)*K*pnorm(d2)  
 }
 
@@ -146,7 +146,58 @@ BSM(35, 0.5, 0.05, 0.25, 35.5)
 # Looks correct!^
 ```
 
+We calculate the price of the given Call option (parameters are given in code block above) with the Black-Scholes-Merton formula.
+
+```{r}
+BSM.price <- BSM(s0, T1, r, sigma, K)
+```
+
+As we can see, the price is approximately equal to `r round(BSM.price, 2)`, when rounded to 2 decimals. 
+
 We implement a Monte Carlo estimator for this option price by simulation paths with the Euler-Maruyama method for given steps and paths. 
+
+```{r}
+# Monte Carlo estimator for Euler-Maruyama. 
+# This is for a Call option still (almost general) (slide 28)
+MC <- function(M, n, r, s0, mu, h, sigma, T1, price.profile, set.S, ...){
+  C.values <- rep(NA, length.out = M)
+  for (i in 1:M){
+    Z <- rnorm(n)
+    S.values <- rep(NA, length.out = n+1)
+    S.values[1] <- s0
+    for (j in 2:(n+1)){
+      S.values[j] <- S.values[j-1] + mu*S.values[j-1]*h + sigma*S.values[j-1]*sqrt(h)*Z[j-1]
+    }
+    S <- set.S(S.values, n) # Generality is kept using a helper function set.S.
+    C.values[i] <- price.profile(S, K)
+  }
+  exp(-r*T1)*mean(C.values) # Return discounted average payoff
+}
+```
+
+```{r}
+# Definition of helper functions to feed into MC estimator code above. 
+Call.profile <- function(S, K){
+  max(0, S-K)
+}
+
+# Feed the function into the MC estimator in order to calculate estimate for Call option. 
+Call.set.S <- function(S.values){
+  S.values[length(S.values)] # The Call option uses the last value in the list. 
+}
+```
+
+```{r}
+# Simulate paths with the MC estimator and Euler-Maruyama. 
+# mu = 0? h = 1? Helt sikkert feil! Den må nok avgjøres basert på diskretiseringen (dvs steglengden er h tror jeg)
+MC(10, 10, r, s0, mu = 0, h = 1, sigma, T1, Call.profile, Call.set.S, K = K)
+```
+
+
+```{r}
+# Calculations of relative error and absolute error.
+```
+
 
 # Problem C - Option Pricing II
 
@@ -154,4 +205,10 @@ A Monte Carlo estimator is implemented for a specific Asian Call Option.
 
 ```{r}
 set.seed(061999)
+
+# This function can be fed into the MC estimator instead. 
+Asian.set.S <- function(S.values){
+  # Average prices every friday. 
+  # I think it still uses the same Call.profile (perhaps this function is not needed after all!)
+}
 ```
