--- a/part1/assignment.Rmd
+++ b/part1/assignment.Rmd
@@ -133,18 +133,24 @@ K <- 23.5
 # to calculate the fair price at t = 0 in closed form.
 BSM <- function(s0, T1, r, sigma, K){
   d1 <- (log(s0/K)+(r+sigma^2/2)*T1)/(sigma*sqrt(T1))
-  #print(d1)
   d2 <- d1 - sigma*sqrt(T1)
-  #print(d2)
-  #print(pnorm(d1))
-  #print(pnorm(d2))
   s0*pnorm(d1) - exp(-r*T1)*K*pnorm(d2)  
 }
-
-# Test with result on slide 48.
-BSM(35, 0.5, 0.05, 0.25, 35.5)
-# Looks correct!^
 ```
+
+```{r}
+# Exercises on slide 45
+# Call price
+BSM(s0 = 20, K = 18, T1 = 1, r = 0.05, sigma = 0.2)
+# Put price
+BSM(s0 = 20, K = 18, T1 = 1, r = 0.05, sigma = 0.2)-20+exp(-0.05*1)*18
+
+# Call price
+BSM(s0 = 20, K = 18, T1 = 1, r = 0.05, sigma = 0.2)
+# Put price
+BSM(s0 = 20, K = 18, T1 = 1, r = 0.05, sigma = 0.2)-20+exp(-0.05*1)*18
+```
+
 
 We calculate the price of the given Call option (parameters are given in code block above) with the Black-Scholes-Merton formula.
 
@@ -156,22 +162,25 @@ As we can see, the price is approximately equal to `r round(BSM.price, 2)`, when
 
 We implement a Monte Carlo estimator for this option price by simulation paths with the Euler-Maruyama method for given steps and paths. 
 
+Notice that for the path-independent options, like standard European call and put options, it is not needed to save the price path as is done below. This is done to keep the function as general as possible, in order to re-use it for the rest of the assignment. THIS COULD EASILY BE CHANGED IN THIS CASE IF TOO SLOW! (simply overwriting the previous value in the loop in every iteration).
+
 ```{r}
 # Monte Carlo estimator for Euler-Maruyama. 
 # This is for a Call option still (almost general) (slide 28)
-MC <- function(M, n, r, s0, mu, h, sigma, T1, price.profile, set.S, ...){
-  C.values <- rep(NA, length.out = M)
-  for (i in 1:M){
-    Z <- rnorm(n)
-    S.values <- rep(NA, length.out = n+1)
-    S.values[1] <- s0
-    for (j in 2:(n+1)){
+MC <- function(M, n, r, s0, mu, h, sigma, T1, payoff.profile, set.S, ...){
+  C.values <- rep(NA, length.out = M) # Initiate vector for saving payoffs per path. 
+  for (i in 1:M){ # Initiate loop for M path.
+    Z <- rnorm(n) # Generate n random variables standard normally. 
+    S.values <- rep(NA, length.out = n+1) # Initiate vector for saving price path. 
+    S.values[1] <- s0 # Initiate starting price at time t = 0. 
+    for (j in 2:(n+1)){ # Loop for Euler-Maruyama - recursively estimate price path. 
       S.values[j] <- S.values[j-1] + mu*S.values[j-1]*h + sigma*S.values[j-1]*sqrt(h)*Z[j-1]
     }
-    S <- set.S(S.values, n) # Generality is kept using a helper function set.S.
-    C.values[i] <- price.profile(S, K)
+    S <- set.S(S.values, n) # Set expected price used in payoff-profile. 
+    # Generality is kept using a helper function set.S.
+    C.values[i] <- payoff.profile(S, K) # Calculate payoff for the path and save in C.values.
   }
-  exp(-r*T1)*mean(C.values) # Return discounted average payoff
+  exp(-r*T1)*mean(C.values) # Return discounted average payoff. This is the MC estimator. 
 }
 ```
 
@@ -196,6 +205,47 @@ MC(10, 10, r, s0, mu = 0, h = 1, sigma, T1, Call.profile, Call.set.S, K = K)
 
 ```{r}
 # Calculations of relative error and absolute error.
+```
+
+TESTER MED EKSEMPLER I SLIDES!
+
+```{r}
+# slide 21 Section 3
+mu <- 0.05
+sigma <- 0.2
+s0 <- 10
+T1 <- 1
+n <- 5
+h <- 1/n
+
+Z <- rnorm(n)
+Z <- c(0.5377, 1.8339, -2.2588, 0.8622, 0.3188)
+S.values <- rep(NA, length.out = n+1)
+S.values[1] <- s0
+for (j in 2:(n+1)){
+  S.values[j] <- S.values[j-1] + mu*S.values[j-1]*h + sigma*S.values[j-1]*sqrt(h)*Z[j-1]
+}
+S.values
+S.values[length(S.values)]
+# Correct!
+# This means that the inner loop with the Euler Method is correctly implemented at least!
+```
+
+```{r}
+MC <- function(M, n, r, s0, mu, h, sigma, T1, payoff.profile, set.S, ...){
+  C.values <- rep(NA, length.out = M)
+  for (i in 1:M){
+    Z <- rnorm(n)
+    S.values <- rep(NA, length.out = n+1)
+    S.values[1] <- s0
+    for (j in 2:(n+1)){
+      S.values[j] <- S.values[j-1] + mu*S.values[j-1]*h + sigma*S.values[j-1]*sqrt(h)*Z[j-1]
+    }
+    S <- set.S(S.values, n) # Generality is kept using a helper function set.S.
+    C.values[i] <- payoff.profile(S, K)
+  }
+  exp(-r*T1)*mean(C.values) # Return discounted average payoff
+}
 ```
 
 
